fix(ui5-avatar): overflow initials are now scaling

--- a/packages/fiori/src/themes/ShellBar.css
+++ b/packages/fiori/src/themes/ShellBar.css
@@ -97,7 +97,6 @@ slot[name="profile"] {
 	width: 2rem;
 	height: 2rem;
 	min-height: 2rem;
-	padding: .25rem;
 	pointer-events: none;
 }
 
