--- a/packages/main/src/themes/Avatar.css
+++ b/packages/main/src/themes/Avatar.css
@@ -3,7 +3,6 @@
 	box-sizing: border-box;
 	position: relative;
 	font-family: "72override", var(--sapFontFamily);
-	vertical-align: middle;
 }
 
 /* The ui5_hovered class is set by FileUploader to indicate hover state of the control */
